# ebike-connect

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
src/ebikeconnect/: __init__.py  client.py  models.py
tests/: conftest.py  test_client.py  test_models.py
